[package]
name = "async-bridge"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-std = "1.0.1"
async-stream = "0.2.0"
env_logger = "0.7.0"
#ethereum-types = "0.8.0"
futures = "0.3.1"
jsonrpsee-core = { git = "https://github.com/paritytech/jsonrpsee.git" }
jsonrpsee-http = { git = "https://github.com/paritytech/jsonrpsee.git" }
linked-hash-map = "0.5.2"
log = "0.4.8"
parking_lot = "0.9.0"
rustc-hex = "2.0.1"
serde = { version = "1.0.40", features = ["derive"] }
serde_json = "1.0.40"
web3 = { git = "https://github.com/tomusdrw/rust-web3.git" }
